[workspace]
resolver = "2"
members = ["crates/fluentpx", "crates/gallery"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["winui-rs"]

# windows crate pinned (NOT floating) per spec section 2.
[workspace.dependencies]
windows = "=0.58.0"
windows-core = "=0.58.0"

# Release profile: small binary (a few MB) per spec section 3.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
